--- a/paises/src/App.css
+++ b/paises/src/App.css
@@ -1,15 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap');
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
+  max-width: 1345px;
+  margin: 70px auto;
   padding: 2rem;  
+  font-family: 'Nunito Sans', sans-serif;
+  
+  
 }
 
 .app{
-  background-color: aqua;
+  background-color: #FAFAFA;
+ 
 
 }
 
-.dark{
-  background-color: brown;
-}
+
 
